--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build:ui": "rm -rf dist && cd ../fullstack-open/osa2/puhelinluettelo/ && npm run build && cp -r dist ../../../fullstack-osa3-backend/",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
