--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "phonebook-backend",
-  "version": "3.1.12",
+  "version": "3.1.14",
   "description": "fullstack exercise",
   "main": "index.js",
   "scripts": {
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/hojahoja/Fullstack-Open-Osa3-Backend#readme",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.5",
     "morgan": "^1.10.0"
