--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "phonebook-backend",
-  "version": "3.1.21",
+  "version": "3.1.22",
   "description": "fullstack exercise",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,8 @@
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,11 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.6.0",
+    "@stylistic/eslint-plugin-js": "^2.3.0",
+    "eslint": "^9.6.0",
+    "eslint-config-prettier": "^9.1.0",
+    "globals": "^15.8.0",
     "nodemon": "^3.1.4"
   }
 }
